--- a/App.rc
+++ b/App.rc
@@ -68,8 +68,15 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "E&xit\tAlt+F4",               ID_FILE_EXIT
     END
+    POPUP "&Edit"
+    BEGIN
+        MENUITEM "&Add Host...",                ID_EDIT_ADDHOST
+        MENUITEM "&Remove Host",                ID_EDIT_REMOVEHOST
+    END
     POPUP "&Help"
     BEGIN
+        MENUITEM "Contents\tF1",                901
+        MENUITEM SEPARATOR
         MENUITEM "&About Farm Monitor",         ID_HELP_ABOUT
     END
 END
@@ -84,9 +91,9 @@ IDD_MAIN DIALOGEX 0, 0, 301, 201
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CLIPCHILDREN
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CONTROL         "",IDC_HOSTS,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | 
-                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,5,290,190,
-                    WS_EX_CLIENTEDGE
+    CONTROL         "",IDC_HOSTS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | 
+                    LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | 
+                    WS_TABSTOP,5,5,290,190,WS_EX_CLIENTEDGE
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 122, 126
@@ -106,6 +113,18 @@ BEGIN
     CTEXT           "www.cix.co.uk/~gort",IDC_WEBSITE,10,80,100,10,SS_NOTIFY | 
                     SS_CENTERIMAGE
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,15
+END
+
+IDD_ADD_HOST DIALOGEX 0, 0, 172, 71
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Add Host"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "&Host name:",IDC_STATIC,10,10,150,8
+    EDITTEXT        IDC_HOST_NAME,10,20,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,45,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,45,50,14
 END
 
 
@@ -138,6 +157,14 @@ BEGIN
     IDD_ABOUT, DIALOG
     BEGIN
         BOTTOMMARGIN, 106
+    END
+
+    IDD_ADD_HOST, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 165
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 64
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -194,6 +221,13 @@ STRINGTABLE
 BEGIN
     ID_FILE_POPUP           "File options"
     ID_FILE_EXIT            "Close the application"
+END
+
+STRINGTABLE 
+BEGIN
+    ID_EDIT_POPUP           "Edit options"
+    ID_EDIT_ADDHOST         "Add a new host\nAdd Host"
+    ID_EDIT_REMOVEHOST      "Remove the selected host\nRemove Host"
 END
 
 #endif    // English (U.K.) resources
