Reorganised classes into separate logical folders.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -132,97 +132,6 @@
 	</References>
 	<Files>
 		<Filter
-			Name="Source Files"
-			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
-			<File
-				RelativePath=".\AboutDlg.cpp">
-			</File>
-			<File
-				RelativePath=".\AddHostDlg.cpp">
-			</File>
-			<File
-				RelativePath=".\AppCmds.cpp">
-			</File>
-			<File
-				RelativePath=".\AppDlg.cpp">
-			</File>
-			<File
-				RelativePath=".\AppToolbar.cpp">
-			</File>
-			<File
-				RelativePath=".\AppWnd.cpp">
-			</File>
-			<File
-				RelativePath=".\FarmMonitor.cpp">
-			</File>
-			<File
-				RelativePath=".\Hosts.cpp">
-			</File>
-			<File
-				RelativePath=".\pch.cpp">
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
-				</FileConfiguration>
-			</File>
-		</Filter>
-		<Filter
-			Name="Header Files"
-			Filter="h;hpp;hxx;hm;inl;inc;xsd"
-			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
-			<File
-				RelativePath=".\AboutAppCmd.hpp">
-			</File>
-			<File
-				RelativePath=".\AboutDlg.hpp">
-			</File>
-			<File
-				RelativePath=".\AddHostCmd.hpp">
-			</File>
-			<File
-				RelativePath=".\AddHostDlg.hpp">
-			</File>
-			<File
-				RelativePath=".\AppCmds.hpp">
-			</File>
-			<File
-				RelativePath=".\AppDlg.hpp">
-			</File>
-			<File
-				RelativePath=".\AppToolbar.hpp">
-			</File>
-			<File
-				RelativePath=".\AppWnd.hpp">
-			</File>
-			<File
-				RelativePath=".\Common.hpp">
-			</File>
-			<File
-				RelativePath=".\ExitAppCmd.hpp">
-			</File>
-			<File
-				RelativePath=".\FarmMonitor.hpp">
-			</File>
-			<File
-				RelativePath=".\Hosts.hpp">
-			</File>
-			<File
-				RelativePath=".\RemoveHostCmd.hpp">
-			</File>
-			<File
-				RelativePath=".\ShowManualCmd.hpp">
-			</File>
-		</Filter>
-		<Filter
 			Name="Resource Files"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
@@ -247,6 +156,139 @@
 			Filter="">
 			<File
 				RelativePath=".\HelpFile\FarmMonitor.html">
+			</File>
+		</Filter>
+		<Filter
+			Name="Commands"
+			Filter="">
+			<File
+				RelativePath=".\AboutAppCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\AddHostCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\AppCmds.cpp">
+			</File>
+			<File
+				RelativePath=".\AppCmds.hpp">
+			</File>
+			<File
+				RelativePath=".\EditToolsCmd.cpp">
+			</File>
+			<File
+				RelativePath=".\EditToolsCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\ExecuteToolCmd.cpp">
+			</File>
+			<File
+				RelativePath=".\ExecuteToolCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\ExitAppCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\RemoveHostCmd.hpp">
+			</File>
+			<File
+				RelativePath=".\ShowManualCmd.hpp">
+			</File>
+		</Filter>
+		<Filter
+			Name="UI"
+			Filter="">
+			<File
+				RelativePath=".\AboutDlg.cpp">
+			</File>
+			<File
+				RelativePath=".\AboutDlg.hpp">
+			</File>
+			<File
+				RelativePath=".\AddHostDlg.cpp">
+			</File>
+			<File
+				RelativePath=".\AddHostDlg.hpp">
+			</File>
+			<File
+				RelativePath=".\AppDlg.cpp">
+			</File>
+			<File
+				RelativePath=".\AppDlg.hpp">
+			</File>
+			<File
+				RelativePath=".\AppToolbar.cpp">
+			</File>
+			<File
+				RelativePath=".\AppToolbar.hpp">
+			</File>
+			<File
+				RelativePath=".\AppWnd.cpp">
+			</File>
+			<File
+				RelativePath=".\AppWnd.hpp">
+			</File>
+			<File
+				RelativePath=".\HostToolDialog.cpp">
+			</File>
+			<File
+				RelativePath=".\HostToolDialog.hpp">
+			</File>
+			<File
+				RelativePath=".\HostToolsDialog.cpp">
+			</File>
+			<File
+				RelativePath=".\HostToolsDialog.hpp">
+			</File>
+		</Filter>
+		<Filter
+			Name="Model"
+			Filter="">
+			<File
+				RelativePath=".\Hosts.cpp">
+			</File>
+			<File
+				RelativePath=".\Hosts.hpp">
+			</File>
+			<File
+				RelativePath=".\Tool.cpp">
+			</File>
+			<File
+				RelativePath=".\Tool.hpp">
+			</File>
+			<File
+				RelativePath=".\Tools.cpp">
+			</File>
+			<File
+				RelativePath=".\Tools.hpp">
+			</File>
+		</Filter>
+		<Filter
+			Name="App"
+			Filter="">
+			<File
+				RelativePath=".\Common.hpp">
+			</File>
+			<File
+				RelativePath=".\FarmMonitor.cpp">
+			</File>
+			<File
+				RelativePath=".\FarmMonitor.hpp">
+			</File>
+			<File
+				RelativePath=".\pch.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32">
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<File
