--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -174,6 +174,9 @@
 				RelativePath=".\AppCmds.hpp">
 			</File>
 			<File
+				RelativePath=".\CopyHostCmd.hpp">
+			</File>
+			<File
 				RelativePath=".\EditToolsCmd.cpp">
 			</File>
 			<File
@@ -291,6 +294,12 @@
 				</FileConfiguration>
 			</File>
 		</Filter>
+		<File
+			RelativePath=".\ReadMe.txt">
+		</File>
+		<File
+			RelativePath=".\RelNotes.txt">
+		</File>
 		<File
 			RelativePath=".\TODO.txt">
 		</File>
