Disabled the auto-refresh on start-up and provided a manual refresh button.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -188,6 +188,9 @@
 				RelativePath=".\ExitAppCmd.hpp">
 			</File>
 			<File
+				RelativePath=".\RefreshViewCmd.hpp">
+			</File>
+			<File
 				RelativePath=".\RemoveHostCmd.hpp">
 			</File>
 			<File
