--- a/App.rc
+++ b/App.rc
@@ -71,8 +71,12 @@ BEGIN
     BEGIN
         MENUITEM "&Add Host...",                ID_HOST_ADDHOST
         MENUITEM "&Remove Host",                ID_HOST_REMOVEHOST
-        MENUITEM "Copy Host",                   ID_HOST_COPYHOST
+        MENUITEM "&Copy Host to Clipboard",     ID_HOST_COPYHOST
         MENUITEM SEPARATOR
+    END
+    POPUP "&View"
+    BEGIN
+        MENUITEM "&Refresh\tF5",                ID_VIEW_REFRESH
     END
     POPUP "&Tools"
     BEGIN
@@ -80,7 +84,7 @@ BEGIN
     END
     POPUP "&Help"
     BEGIN
-        MENUITEM "Contents\tF1",                ID_HELP_CONTENTS
+        MENUITEM "&Contents\tF1",               ID_HELP_CONTENTS
         MENUITEM SEPARATOR
         MENUITEM "&About Farm Monitor",         ID_HELP_ABOUT
     END
@@ -92,7 +96,7 @@ BEGIN
     BEGIN
         MENUITEM "&Add Host...",                ID_HOST_ADDHOST
         MENUITEM "&Remove Host",                ID_HOST_REMOVEHOST
-        MENUITEM "Copy Host",                   ID_HOST_COPYHOST
+        MENUITEM "&Copy Host to Clipboard",     ID_HOST_COPYHOST
         MENUITEM SEPARATOR
     END
 END
@@ -109,7 +113,8 @@ FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "",IDC_HOSTS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | 
                     LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | 
-                    WS_TABSTOP,5,5,290,190,WS_EX_CLIENTEDGE
+                    WS_TABSTOP,5,5,290,170,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "Refresh",IDC_REFRESH,5,180,50,14
 END
 
 IDD_ABOUT DIALOGEX 0, 0, 122, 126
@@ -126,8 +131,8 @@ BEGIN
     CTEXT           "%s",IDC_COPYRIGHT,10,60,100,10,SS_CENTERIMAGE
     CTEXT           "gort@cix.co.uk",IDC_EMAIL,10,70,100,10,SS_NOTIFY | 
                     SS_CENTERIMAGE
-    CTEXT           "www.cix.co.uk/~gort",IDC_WEBSITE,10,80,100,10,SS_NOTIFY | 
-                    SS_CENTERIMAGE
+    CTEXT           "www.chrisoldwood.com",IDC_WEBSITE,10,80,100,10,
+                    SS_NOTIFY | SS_CENTERIMAGE
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,15
 END
 
@@ -191,6 +196,7 @@ IDR_APPTOOLBAR          BITMAP                  "Toolbar.bmp"
 IDR_APPACCEL ACCELERATORS 
 BEGIN
     VK_F1,          ID_HELP_CONTENTS,       VIRTKEY, NOINVERT
+    VK_F5,          ID_VIEW_REFRESH,        VIRTKEY, NOINVERT
 END
 
 
@@ -312,6 +318,12 @@ BEGIN
     ID_HOST_INVOKE_TOOL_7   "Invoke the tool for the selected host"
     ID_HOST_INVOKE_TOOL_8   "Invoke the tool for the selected host"
     ID_HOST_INVOKE_TOOL_9   "Invoke the tool for the selected host"
+END
+
+STRINGTABLE 
+BEGIN
+    ID_VIEW_POPUP           "View options"
+    ID_VIEW_REFRESH         "Refresh the information about the hosts"
 END
 
 #endif    // English (U.K.) resources
