Added status icons for each host in the main view.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -141,6 +141,9 @@
 				RelativePath=".\App.rcv">
 			</File>
 			<File
+				RelativePath=".\HostIcons.bmp">
+			</File>
+			<File
 				RelativePath=".\Resource.h">
 			</File>
 			<File
