--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -121,6 +121,18 @@
 		</Configuration>
 	</Configurations>
 	<References>
+		<ProjectReference
+			ReferencedProjectIdentifier="{790BC113-52FB-4565-8968-79B8B011C520}"
+			Name="Core"/>
+		<ProjectReference
+			ReferencedProjectIdentifier="{9B0335B6-93BE-4604-8497-27431874D758}"
+			Name="Wcl"/>
+		<ProjectReference
+			ReferencedProjectIdentifier="{6497EA41-2782-4A79-8840-6854E22EC4F4}"
+			Name="WMI"/>
+		<ProjectReference
+			ReferencedProjectIdentifier="{2BF56C15-FDAD-480B-9C25-951E43773ED6}"
+			Name="XML"/>
 	</References>
 	<Files>
 		<Filter
