Switched to storing the non-UI data in an AppData based XML data file. Note: To maintain backwards compatibility we try and load from the registry first and remove the registry data when saving.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -265,6 +265,12 @@
 				RelativePath=".\Hosts.hpp">
 			</File>
 			<File
+				RelativePath=".\Model.cpp">
+			</File>
+			<File
+				RelativePath=".\Model.hpp">
+			</File>
+			<File
 				RelativePath=".\Tool.cpp">
 			</File>
 			<File
