--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -151,6 +151,9 @@
 					RelativePath="..\Hosts.cpp">
 				</File>
 				<File
+					RelativePath="..\Model.cpp">
+				</File>
+				<File
 					RelativePath="..\Tool.cpp">
 				</File>
 				<File
