Reimplemented the Hosts collection to use a complex Host type instead of just a string value.

--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -148,6 +148,9 @@
 				Name="Impl"
 				Filter="">
 				<File
+					RelativePath="..\Host.cpp">
+				</File>
+				<File
 					RelativePath="..\Hosts.cpp">
 				</File>
 				<File
