--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -259,6 +259,12 @@
 			Name="Model"
 			Filter="">
 			<File
+				RelativePath=".\Host.cpp">
+			</File>
+			<File
+				RelativePath=".\Host.hpp">
+			</File>
+			<File
 				RelativePath=".\Hosts.cpp">
 			</File>
 			<File
