Refactored XML data document persistence to make it easier to test. Added version number to the XML data document.

--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -139,7 +139,16 @@
 			Name="Model"
 			Filter="">
 			<File
+				RelativePath=".\DataDocument.cpp">
+			</File>
+			<File
+				RelativePath=".\DataDocument.hpp">
+			</File>
+			<File
 				RelativePath=".\HostsTests.cpp">
+			</File>
+			<File
+				RelativePath=".\ModelTests.cpp">
 			</File>
 			<File
 				RelativePath=".\ToolsTests.cpp">
