Added support for associating an environment and description with the hostname. Added validation of the mandatory host and tool fields when loading.

--- a/App.rc
+++ b/App.rc
@@ -138,7 +138,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,15
 END
 
-IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 71
+IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 130
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Add/Edit Host"
@@ -146,8 +146,12 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "&Host name:",IDC_STATIC,10,10,150,8
     EDITTEXT        IDC_HOST_NAME,10,20,150,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,55,45,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,110,45,50,14
+    LTEXT           "&Environment:",IDC_STATIC,10,40,150,8
+    EDITTEXT        IDC_ENVIRONMENT,10,50,150,14,ES_AUTOHSCROLL
+    LTEXT           "&Description:",IDC_STATIC,10,70,150,8
+    EDITTEXT        IDC_DESCRIPTION,10,80,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,105,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,105,50,14
 END
 
 IDD_HOST_TOOLS DIALOGEX 0, 0, 412, 181
