Added button on hostname dialog to allow the hostname to be tested.

--- a/App.rc
+++ b/App.rc
@@ -138,20 +138,21 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,15
 END
 
-IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 130
+IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 146
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Add/Edit Host"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "&Host name:",IDC_STATIC,10,10,150,8
+    LTEXT           "&Host name:",IDC_STATIC,10,10,75,8
     EDITTEXT        IDC_HOST_NAME,10,20,150,14,ES_AUTOHSCROLL
-    LTEXT           "&Environment:",IDC_STATIC,10,40,150,8
-    EDITTEXT        IDC_ENVIRONMENT,10,50,150,14,ES_AUTOHSCROLL
-    LTEXT           "&Description:",IDC_STATIC,10,70,150,8
-    EDITTEXT        IDC_DESCRIPTION,10,80,150,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,55,105,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,110,105,50,14
+    PUSHBUTTON      "Check",IDC_CHECK_HOST,110,35,50,14
+    LTEXT           "&Environment:",IDC_STATIC,10,55,150,8
+    EDITTEXT        IDC_ENVIRONMENT,10,65,150,14,ES_AUTOHSCROLL
+    LTEXT           "&Description:",IDC_STATIC,10,85,150,8
+    EDITTEXT        IDC_DESCRIPTION,10,95,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,120,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,120,50,14
 END
 
 IDD_HOST_TOOLS DIALOGEX 0, 0, 412, 181
@@ -215,6 +216,11 @@ END
 #ifdef APSTUDIO_INVOKED
 GUIDELINES DESIGNINFO 
 BEGIN
+    IDD_ADDEDIT_HOST, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 130
+    END
+
     IDD_HOST_TOOLS, DIALOG
     BEGIN
         BOTTOMMARGIN, 80
