--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -123,6 +123,9 @@
 			ReferencedProjectIdentifier="{790BC113-52FB-4565-8968-79B8B011C520}"
 			Name="Core"/>
 		<ProjectReference
+			ReferencedProjectIdentifier="{FAB8D717-85EC-4896-B5DC-FDF0A0B67C92}"
+			Name="NCL"/>
+		<ProjectReference
 			ReferencedProjectIdentifier="{9B0335B6-93BE-4604-8497-27431874D758}"
 			Name="Wcl"/>
 		<ProjectReference
