Added support for re-ordering the tools.

--- a/App.rc
+++ b/App.rc
@@ -146,7 +146,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "&Host name:",IDC_STATIC,10,10,75,8
     EDITTEXT        IDC_HOST_NAME,10,20,150,14,ES_AUTOHSCROLL
-    PUSHBUTTON      "Check",IDC_CHECK_HOST,110,35,50,14
+    PUSHBUTTON      "&Check",IDC_CHECK_HOST,110,35,50,14
     LTEXT           "&Environment:",IDC_STATIC,10,55,150,8
     EDITTEXT        IDC_ENVIRONMENT,10,65,150,14,ES_AUTOHSCROLL
     LTEXT           "&Description:",IDC_STATIC,10,85,150,8
@@ -155,7 +155,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,110,120,50,14
 END
 
-IDD_HOST_TOOLS DIALOGEX 0, 0, 412, 181
+IDD_HOST_TOOLS DIALOGEX 0, 0, 362, 201
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Host Tools"
@@ -163,13 +163,15 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     CONTROL         "",IDC_TOOLS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | 
                     LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | LVS_NOSORTHEADER | 
-                    WS_BORDER | WS_TABSTOP,5,5,400,150,WS_EX_CLIENTEDGE
+                    WS_BORDER | WS_TABSTOP,5,5,350,150,WS_EX_CLIENTEDGE
     PUSHBUTTON      "&Add...",IDC_ADD,5,160,50,14
     PUSHBUTTON      "&Copy...",IDC_COPY,60,160,50,14
-    PUSHBUTTON      "&Edit...",IDC_EDIT,115,160,50,14
-    PUSHBUTTON      "&Delete...",IDC_DELETE,171,160,50,14
-    DEFPUSHBUTTON   "OK",IDOK,300,160,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,355,160,50,14
+    PUSHBUTTON      "&Edit...",IDC_EDIT,5,180,50,14
+    PUSHBUTTON      "&Delete...",IDC_DELETE,60,180,50,14
+    PUSHBUTTON      "&Up",IDC_UP,130,160,50,14
+    PUSHBUTTON      "Do&wn",IDC_DOWN,180,160,50,14
+    DEFPUSHBUTTON   "OK",IDOK,250,160,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,305,160,50,14
 END
 
 IDD_HOST_TOOL DIALOGEX 0, 0, 267, 106
@@ -223,7 +225,7 @@ BEGIN
 
     IDD_HOST_TOOLS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 80
+        BOTTOMMARGIN, 100
     END
 END
 #endif    // APSTUDIO_INVOKED
