--- a/App.rc
+++ b/App.rc
@@ -138,7 +138,7 @@ BEGIN
     DEFPUSHBUTTON   "OK",IDOK,35,100,50,15
 END
 
-IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 146
+IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 151
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Add/Edit Host"
@@ -146,13 +146,15 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "&Host name:",IDC_STATIC,10,10,75,8
     EDITTEXT        IDC_HOST_NAME,10,20,150,14,ES_AUTOHSCROLL
+    CONTROL         "&Monitor?",IDC_MONITOR,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,10,40,90,10
     PUSHBUTTON      "&Check",IDC_CHECK_HOST,110,35,50,14
-    LTEXT           "&Environment:",IDC_STATIC,10,55,150,8
-    EDITTEXT        IDC_ENVIRONMENT,10,65,150,14,ES_AUTOHSCROLL
-    LTEXT           "&Description:",IDC_STATIC,10,85,150,8
-    EDITTEXT        IDC_DESCRIPTION,10,95,150,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,55,120,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,110,120,50,14
+    LTEXT           "&Environment:",IDC_STATIC,10,60,150,8
+    EDITTEXT        IDC_ENVIRONMENT,10,71,150,14,ES_AUTOHSCROLL
+    LTEXT           "&Description:",IDC_STATIC,10,90,150,8
+    EDITTEXT        IDC_DESCRIPTION,10,100,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,126,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,126,50,14
 END
 
 IDD_HOST_TOOLS DIALOGEX 0, 0, 362, 201
@@ -220,7 +222,7 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_ADDEDIT_HOST, DIALOG
     BEGIN
-        BOTTOMMARGIN, 130
+        BOTTOMMARGIN, 135
     END
 
     IDD_HOST_TOOLS, DIALOG
