Started implementing a dynamic queries collection. The queries collection can be executed, displayed and persisted (no unit tests yet though). Added detection of the first application run so that a default host, tools and queries is configured.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -286,6 +286,12 @@
 				RelativePath=".\Model.hpp">
 			</File>
 			<File
+				RelativePath=".\Queries.cpp">
+			</File>
+			<File
+				RelativePath=".\Queries.hpp">
+			</File>
+			<File
 				RelativePath=".\Query.cpp">
 			</File>
 			<File
