Added unit tests for the new Queries collection.

--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -151,6 +151,9 @@
 				RelativePath=".\ModelTests.cpp">
 			</File>
 			<File
+				RelativePath=".\QueriesTests.cpp">
+			</File>
+			<File
 				RelativePath=".\ToolsTests.cpp">
 			</File>
 			<Filter
