Started adding UI support for editing the WMI queries.

--- a/App.rc
+++ b/App.rc
@@ -80,6 +80,7 @@ BEGIN
     END
     POPUP "&View"
     BEGIN
+        MENUITEM "&Queries...",                 ID_VIEW_QUERIES
         MENUITEM "&Refresh\tF5",                ID_VIEW_REFRESH
     END
     POPUP "&Tools"
@@ -176,7 +177,7 @@ BEGIN
     PUSHBUTTON      "&Add...",IDC_ADD,5,160,50,14
     PUSHBUTTON      "&Copy...",IDC_COPY,60,160,50,14
     PUSHBUTTON      "&Edit...",IDC_EDIT,5,180,50,14
-    PUSHBUTTON      "&Delete...",IDC_DELETE,60,180,50,14
+    PUSHBUTTON      "&Delete",IDC_DELETE,60,180,50,14
     PUSHBUTTON      "&Up",IDC_UP,130,160,50,14
     PUSHBUTTON      "Do&wn",IDC_DOWN,180,160,50,14
     DEFPUSHBUTTON   "OK",IDOK,250,160,50,14
@@ -211,6 +212,36 @@ BEGIN
     EDITTEXT        IDC_PASSWORD,10,50,150,14,ES_PASSWORD | ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,55,75,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,110,75,50,14
+END
+
+IDD_QUERIES DIALOGEX 0, 0, 512, 201
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "WMI Queries"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "",IDC_QUERIES,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | 
+                    LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,5,5,500,150,
+                    WS_EX_CLIENTEDGE
+    DEFPUSHBUTTON   "OK",IDOK,400,160,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,455,160,50,14
+    PUSHBUTTON      "&Add...",IDC_ADD,5,160,50,14
+    PUSHBUTTON      "&Copy...",IDC_COPY,60,160,50,14
+    PUSHBUTTON      "&Edit...",IDC_EDIT,5,180,50,14
+    PUSHBUTTON      "&Delete",IDC_DELETE,60,180,50,14
+    PUSHBUTTON      "&Up",IDC_UP,130,160,50,14
+    PUSHBUTTON      "Do&wn",IDC_DOWN,180,160,50,14
+END
+
+IDD_QUERY DIALOGEX 0, 0, 186, 95
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
+    WS_SYSMENU
+CAPTION "Add/Edit Query"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "OK",IDOK,75,75,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,130,75,50,14
 END
 
 
@@ -258,6 +289,22 @@ BEGIN
         RIGHTMARGIN, 165
         TOPMARGIN, 7
         BOTTOMMARGIN, 94
+    END
+
+    IDD_QUERIES, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 505
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 194
+    END
+
+    IDD_QUERY, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 88
     END
 END
 #endif    // APSTUDIO_INVOKED
