--- a/App.rc
+++ b/App.rc
@@ -147,7 +147,7 @@ END
 IDD_ADDEDIT_HOST DIALOGEX 0, 0, 172, 181
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
-CAPTION "Add/Edit Host"
+CAPTION "Host"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "&Host name:",IDC_STATIC,10,10,75,8
@@ -234,14 +234,28 @@ BEGIN
     PUSHBUTTON      "Do&wn",IDC_DOWN,180,160,50,14
 END
 
-IDD_QUERY DIALOGEX 0, 0, 186, 95
+IDD_QUERY DIALOGEX 0, 0, 172, 221
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
-CAPTION "Add/Edit Query"
+CAPTION "WMI Query"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,75,75,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,130,75,50,14
+    LTEXT           "Column &heading:",IDC_STATIC,10,10,150,8
+    EDITTEXT        IDC_TITLE,10,20,150,14,ES_AUTOHSCROLL
+    LTEXT           "WMI &class:",IDC_STATIC,10,40,150,8
+    COMBOBOX        IDC_WMI_CLASS,10,50,150,50,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "WMI &property:",IDC_STATIC,10,70,150,8
+    EDITTEXT        IDC_WMI_PROPERTY,10,81,150,14,ES_AUTOHSCROLL
+    LTEXT           "Formatting:",IDC_STATIC,10,100,150,8
+    COMBOBOX        IDC_FORMAT,10,110,150,50,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Property to &filter on:",IDC_STATIC,10,135,150,8
+    EDITTEXT        IDC_FILTER,10,145,150,14,ES_AUTOHSCROLL
+    LTEXT           "&Value to filter on:",IDC_STATIC,10,164,150,8
+    EDITTEXT        IDC_VALUE,10,175,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,195,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,195,50,14
 END
 
 
@@ -302,9 +316,9 @@ BEGIN
     IDD_QUERY, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 165
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 214
     END
 END
 #endif    // APSTUDIO_INVOKED
