Initial version of the help file. Added the WiX installer script.

--- a/FarmMonitor.vcproj
+++ b/FarmMonitor.vcproj
@@ -378,6 +378,12 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath=".\FarmMonitor.wxl">
+		</File>
+		<File
+			RelativePath=".\FarmMonitor.wxs">
+		</File>
+		<File
 			RelativePath=".\ReadMe.txt">
 		</File>
 		<File
