--- a/App.rc
+++ b/App.rc
@@ -262,24 +262,32 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,110,195,50,14
 END
 
-IDD_SERVICES DIALOGEX 0, 0, 186, 95
+IDD_SERVICES DIALOGEX 0, 0, 312, 231
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Services"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,75,75,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,130,75,50,14
+    CONTROL         "",IDC_SERVICES,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | 
+                    LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | 
+                    WS_TABSTOP,5,5,300,200,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "&Refresh",IDC_REFRESH,5,210,50,14
+    PUSHBUTTON      "Close",IDCANCEL,255,210,50,14
 END
 
-IDD_PROCESSES DIALOGEX 0, 0, 186, 95
+IDD_PROCESSES DIALOGEX 0, 0, 312, 231
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Processes"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,75,75,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,130,75,50,14
+    CONTROL         "",IDC_PROCESSES,"SysListView32",LVS_REPORT | 
+                    LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | 
+                    LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | 
+                    WS_TABSTOP,5,5,300,200,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "&Refresh",IDC_REFRESH,5,210,50,14
+    PUSHBUTTON      "Close",IDCANCEL,255,210,50,14
 END
 
 
@@ -349,17 +357,17 @@ BEGIN
     IDD_SERVICES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 305
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 224
     END
 
     IDD_PROCESSES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 305
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 224
     END
 END
 #endif    // APSTUDIO_INVOKED
