Added some template queries to the "add query" dialog.

--- a/App.rc
+++ b/App.rc
@@ -238,28 +238,33 @@ BEGIN
     PUSHBUTTON      "Do&wn",IDC_DOWN,180,160,50,14
 END
 
-IDD_QUERY DIALOGEX 0, 0, 172, 221
+IDD_QUERY DIALOGEX 0, 0, 172, 276
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "WMI Query"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Column &heading:",IDC_STATIC,10,10,150,8
-    EDITTEXT        IDC_TITLE,10,20,150,14,ES_AUTOHSCROLL
-    LTEXT           "WMI &class:",IDC_STATIC,10,40,150,8
-    COMBOBOX        IDC_WMI_CLASS,10,50,150,50,CBS_DROPDOWN | CBS_SORT | 
+    LTEXT           "Template &queries:",IDC_STATIC,10,10,150,8
+    COMBOBOX        IDC_TEMPLATES,10,20,150,100,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "WMI &property:",IDC_STATIC,10,70,150,8
-    EDITTEXT        IDC_WMI_PROPERTY,10,81,150,14,ES_AUTOHSCROLL
-    LTEXT           "Formatting:",IDC_STATIC,10,100,150,8
-    COMBOBOX        IDC_FORMAT,10,110,150,50,CBS_DROPDOWNLIST | CBS_SORT | 
+    PUSHBUTTON      "Apply",IDC_APPLY,110,35,50,14
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDFRAME,10,55,150,1
+    LTEXT           "Column &heading:",IDC_STATIC,10,65,150,8
+    EDITTEXT        IDC_TITLE,10,75,150,14,ES_AUTOHSCROLL
+    LTEXT           "WMI &class:",IDC_STATIC,10,95,150,8
+    COMBOBOX        IDC_WMI_CLASS,10,105,150,50,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Property to &filter on:",IDC_STATIC,10,135,150,8
-    EDITTEXT        IDC_FILTER,10,145,150,14,ES_AUTOHSCROLL
-    LTEXT           "&Value to filter on:",IDC_STATIC,10,164,150,8
-    EDITTEXT        IDC_VALUE,10,175,150,14,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,55,195,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,110,195,50,14
+    LTEXT           "WMI &property:",IDC_STATIC,10,125,150,8
+    EDITTEXT        IDC_WMI_PROPERTY,10,136,150,14,ES_AUTOHSCROLL
+    LTEXT           "Formatting:",IDC_STATIC,10,155,150,8
+    COMBOBOX        IDC_FORMAT,10,166,150,50,CBS_DROPDOWNLIST | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Property to &filter on:",IDC_STATIC,10,190,150,8
+    EDITTEXT        IDC_FILTER,10,200,150,14,ES_AUTOHSCROLL
+    LTEXT           "&Value to filter on:",IDC_STATIC,10,219,150,8
+    EDITTEXT        IDC_VALUE,10,230,150,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,55,250,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,110,250,50,14
 END
 
 IDD_SERVICES DIALOGEX 0, 0, 312, 231
@@ -351,7 +356,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 165
         TOPMARGIN, 7
-        BOTTOMMARGIN, 214
+        BOTTOMMARGIN, 269
     END
 
     IDD_SERVICES, DIALOG
