Factored the standard formatting types out into a separate class. Changed the UI for the formatting options so it uses more user friendly names. Removed duplication of the formatting types by introducing some constants.

--- a/App.rc
+++ b/App.rc
@@ -244,7 +244,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION |
 CAPTION "WMI Query"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Template &queries:",IDC_STATIC,10,10,150,8
+    LTEXT           "&Query template:",IDC_STATIC,10,10,150,8
     COMBOBOX        IDC_TEMPLATES,10,20,150,100,CBS_DROPDOWNLIST | 
                     WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Apply",IDC_APPLY,110,35,50,14
@@ -252,16 +252,16 @@ BEGIN
     LTEXT           "Column &heading:",IDC_STATIC,10,65,150,8
     EDITTEXT        IDC_TITLE,10,75,150,14,ES_AUTOHSCROLL
     LTEXT           "WMI &class:",IDC_STATIC,10,95,150,8
-    COMBOBOX        IDC_WMI_CLASS,10,105,150,50,CBS_DROPDOWN | CBS_SORT | 
+    COMBOBOX        IDC_WMI_CLASS,10,105,150,100,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
     LTEXT           "WMI &property:",IDC_STATIC,10,125,150,8
-    EDITTEXT        IDC_WMI_PROPERTY,10,136,150,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_WMI_PROPERTY,10,135,150,14,ES_AUTOHSCROLL
     LTEXT           "Formatting:",IDC_STATIC,10,155,150,8
-    COMBOBOX        IDC_FORMAT,10,166,150,50,CBS_DROPDOWNLIST | CBS_SORT | 
-                    WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_FORMAT,10,165,150,100,CBS_DROPDOWNLIST | WS_VSCROLL | 
+                    WS_TABSTOP
     LTEXT           "Property to &filter on:",IDC_STATIC,10,190,150,8
     EDITTEXT        IDC_FILTER,10,200,150,14,ES_AUTOHSCROLL
-    LTEXT           "&Value to filter on:",IDC_STATIC,10,219,150,8
+    LTEXT           "&Value to filter on:",IDC_STATIC,10,220,150,8
     EDITTEXT        IDC_VALUE,10,230,150,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,55,250,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,110,250,50,14
