--- a/Test/Test.vcproj
+++ b/Test/Test.vcproj
@@ -192,6 +192,9 @@
 				RelativePath=".\CredentialsTests.cpp">
 			</File>
 			<File
+				RelativePath=".\FormatsTests.cpp">
+			</File>
+			<File
 				RelativePath=".\pch.cpp">
 				<FileConfiguration
 					Name="Debug|Win32">
@@ -217,6 +220,9 @@
 				Filter="">
 				<File
 					RelativePath="..\Credentials.cpp">
+				</File>
+				<File
+					RelativePath="..\Formats.cpp">
 				</File>
 				<File
 					RelativePath="..\QueryRunner.cpp">
