Added ability to start and stop services.

--- a/App.rc
+++ b/App.rc
@@ -278,6 +278,9 @@ BEGIN
                     LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | 
                     WS_TABSTOP,5,5,300,200,WS_EX_CLIENTEDGE
     PUSHBUTTON      "&Refresh",IDC_REFRESH,5,210,50,14
+    PUSHBUTTON      "&Start",IDC_START,75,210,50,14
+    PUSHBUTTON      "R&estart",IDC_RESTART,185,210,50,14
+    PUSHBUTTON      "Sto&p",IDC_STOP,130,210,50,14
     PUSHBUTTON      "Close",IDCANCEL,255,210,50,14
 END
 
